<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menu_names_array">
        <item>Join Map</item>
        <item>Find Map</item>
        <item>Quit Map</item>
        <item>Map Info</item>
        <item>--------</item>
    </string-array>

    <string-array name="pref_map_type_entries">
        <item>Normal</item>
        <item>Terrain</item>
        <item>Satellite</item>
    </string-array>

    <string-array name="pref_map_type_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Avatar Settings</string>

    <string name="app_name">OeMap</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="bundle_spacename">mapname</string>
    <string name="bundle_sid">sid</string>
    <string name="bundle_type">type</string>
    <string name="bundle_uri">uri</string>

    <string name="db_name_preferences">oemap_prefs_db</string>
    <string name="db_name_presence">oemap_presences_db</string>
    <string name="db_name_spaces">oemap_spaces_db</string>

    <string name="drawer_close">Closed!</string>
    <string name="drawer_open">Open!</string>
    <string name="drawer_title"></string>

    <string name="hello_world">Hello world!</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="map_name_fld_text">Map Name</string>
    <string name="msg_still_looking">still looking for your current location...</string>
    <string name="new_map_dialog_title">Join Map</string>
    <string name="new_priv_map_dialog_title">New Private Map</string>
    <string name="null_map_location_message">Join or create a map to find your location.</string>
    <string name="null_map_name">none</string>
    <string name="onextent_prefs_key">onextent_prefs</string>

    <string name="pref_done_button_label">Done</string>
    <string name="pref_map_type">pref_map_type</string>
    <string name="pref_map_types_summary">Varies types of maps, ie: terrain, satellite, normal </string>
    <string name="pref_map_types_title">Map Types</string>
    <string name="pref_show_indoors">pref_show_indoors</string>
    <string name="pref_show_indoors_summary">Show Indoors on Map</string>
    <string name="pref_show_indoors_title">Show Indoors</string>
    <string name="pref_show_traffic">pref_show_traffic</string>
    <string name="pref_show_traffic_summary">Show Traffic on Map</string>
    <string name="pref_show_traffic_title">Show Traffic</string>
    <string name="pref_show_zoom_controls_title">Show Zoom Controls</string>
    <string name="pref_show_autozoom_title">Auto Zoom</string>
    <string name="pref_show_zoom_control_fld_text">Show Zoom Control</string>
    <string name="pref_show_zoom_ctl">pref_show_zoom_ctl</string>
    <string name="pref_autozoom">pref_show_autozoom</string>
    <string name="pref_snippit">pref_snippit</string>
    <string name="pref_snippit_fld_title">Your Default Avatar Message</string>
    <string name="pref_snippit_summary">A message displaying along with your avatar.</string>
    <string name="pref_username">pref_username</string>
    <string name="pref_username_fld_title">Your Default User Name</string>
    <string name="pref_username_summary">Your name you want displayed on the maps</string>
    <string name="prefs_snippit_hint">Enter your status message. Ex: Hi, join me on this photowalk! </string>
    <string name="prefs_username_hint">Enter the name you wish to appear on maps.</string>

    <string name="presence_service_key_running">presence_service_key_running</string>
    <string name="presence_service_key_uid">uid</string>
    <string name="presence_service_name">Augie Map Presence Service</string>
    <string name="presence_service_update_intent">com.onextent.oemap.presenceServiceUpdate</string>
    <string name="presence_service_quit_space_intent">com.onextent.oemap.presenceServiceQuitSpace</string>

    <string name="state_current_space_id">state_current_space_id</string>
    <string name="state_history">state_history</string>
    <string name="state_init">state_init</string>
    <string name="state_lat">state_lat</string>
    <string name="state_lng">state_lng</string>
    <string name="state_zoom_level">state_zoom_level</string>
    <string name="pref_ttl">pref_ttl</string>
    <string name="action_search_title">Search</string>
    <string name="action_share_title">Share Map</string>
    <string name="action_map_settings_title">This Map\'s Settings</string>
    <string name="action_map_size_title">Map Size</string>
    <string name="pref_feature_terrain_title">Terrain</string>
    <string name="pref_feature_satellite_title">Satellite</string>
    <string name="pref_feature_normal_title">Normal</string>
    <string name="pref_global_settings_title">Global Settings</string>
    <string name="pref_map_size">pref_map_size</string>
    <string name="pref_max_presences">pref_max_presences</string>
    <string name="pref_map_number_of_nearest_people_title">People to Show</string>
    <string name="msg_format_nearest_people_0">nobody</string>
    <string name="msg_format_nearest_people_1">the nearest person</string>
    <string name="msg_format_nearest_people">the %d nearest people</string>
    <string name="msg_max_lease_time">until I quit</string>
    <string name="msg_service_is_broadcasting">%s is Broadcasting</string>
    <string name="url_base_map_share">http://oemap.onextent.com/share</string>
    <string name="prefs_gcm_regid">prefs_gcm_regid</string>

</resources>

