<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_username"
        android:title="@string/pref_username_fld_title"
        android:summary="@string/pref_username_summary"
        android:defaultValue="nobody"
        />

    <EditTextPreference
            android:key="@string/pref_snippit"
            android:title="@string/pref_snippit_fld_title"
            android:summary="@string/pref_snippit_summary"
            android:defaultValue="Here I am."
            />

    <ListPreference
        android:entries="@array/pref_map_type_entries"
        android:title="@string/pref_map_types_title"
        android:key="@string/pref_map_type"
        android:entryValues="@array/pref_map_type_values"
        android:summary="@string/pref_map_types_summary"
        android:defaultValue="0"
        />

    <CheckBoxPreference
        android:key="@string/pref_show_traffic"
        android:title="@string/pref_show_traffic_title"
        android:summary="@string/pref_show_traffic_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="@string/pref_show_indoors"
        android:title="@string/pref_show_indoors_title"
        android:summary="@string/pref_show_indoors_summary"
        android:defaultValue="false"
        />

</PreferenceScreen>

