<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. Ed Sweeney, All Rights Reserved
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/pref_map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <RadioButton
                android:id="@+id/pref_feature_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/pref_feature_normal_title" />

            <RadioButton
                android:id="@+id/pref_feature_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/pref_feature_terrain_title" />

            <RadioButton
                android:id="@+id/pref_feature_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/pref_feature_satellite_title" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/pref_show_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/pref_show_traffic_title" />

        <CheckBox
            android:id="@+id/pref_show_indoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/pref_show_indoors_title" />

        <CheckBox
            android:id="@+id/pref_show_zoom_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/pref_show_zoom_controls_title" />

        <CheckBox
            android:id="@+id/pref_autozoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/pref_show_autozoom_title" />

    </LinearLayout>
</ScrollView>
