<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            android:showAsAction="always"
            android:icon="@android:drawable/ic_menu_compass"
            />

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:showAsAction="never|withText"
            />

    <item
            android:id="@+id/map_types"
            android:title="Map Types"
            android:showAsAction="never|withText"
            >

        <!-- menu -->
        <group android:checkableBehavior="single"
               android:showAsAction="never|withText"
                >
            <item
                    android:id="@+id/map_type_normal"
                    android:checked="false"
                    android:title="Normal"/>
            <item
                    android:id="@+id/map_type_terrain"
                    android:checked="false"
                    android:title="Terrain"/>
            <item
                    android:id="@+id/map_type_satellite"
                    android:checked="false"
                    android:title="Satellite"/>
        </group>
        <!-- /menu -->

    </item>

    <item
            android:id="@+id/action_help"
            android:title="@string/action_help"
            android:showAsAction="never|withText"
            />

    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:showAsAction="never|withText"
            />

</menu>

